2000-11-21  Tim Jenness  <timj@jach.hawaii.edu>

	* t/fk4to5.t: Use Test module

2000-04-11  Tim Jenness  <timj@jach.hawaii.edu>

	* t/fk4to5.t: Improve the test (and fix btoj for -00 decs)
	(btoj): dont use abs($d), multiply by dsign instead.

2000-03-28  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm (ut2lst_tel): Add missing command

	* t/mjd.t: Add new test

	* Makefile.PL: Add Test prerequisite

	* SLA.pm: Increase version number to 0.93

	* t/slaObs.t: Add new test.

	* SLA.xs: Rename slaObs to _slaObs and call from perl layer

	* SLA.pm (slaObs): Add perl layer to translate undef to '' to
	prevent segmentation violation occurring on my linux system.

	* stime: Add example program

        * SLA.pm (lstnow_tel): Trap for unknown telescopes.
	
2000-03-24  Tim Jenness  <timj@jach.hawaii.edu>

	* arrays.c: Use PL_na symbols rather than na

2000-02-14  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: Apply patch to slaEg50 thanks to Chris Phillips.

1999-10-11  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Version number now 0.92
	
	* SLA.pm: Export single precisions commands. Export slaDvxv.
	Update documentation to reflect the exportable commands rather
	than the initial list.
	
	* SLA.xs: Fix compiler warnings by using void* (patch supplied by
	Chris Phillips <phillips@jive.nfra.nl>)

1999-08-03  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Version now 0.91
	
	* SLA.xs: Apply patch for slaEqgal and slaSupgal supplied by
	Tim Kimball (kimball@stsci.edu)
	Allow use of single precision names as aliases to double precision 
	commands.
	Remove use of static char.

	* SLA.pm: Add DR2S and DR2H to the export list. 

1999-05-17  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Version now 0.90 in preparation for CPAN release.

1999-03-12  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Up version number to 0.11

	* SLA.xs: slaDmoon fixed - double not float

1998-06-02  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Complete 99% + add lst routines
